force-app/main/default/objects/External_Participants__c/External_Participants__c.object-meta.xml
<CustomObject>
    <label>External Participants</label>
    <nameField>
        <displayFormat>EP-{00000}</displayFormat>
        <label>External Participants Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>