force-app/main/default/objects/External_Participants__c/fields/External_Participants__c.field-meta.xml
<CustomField>
    <fullName>External_Participants__c</fullName>
    <label>External Participants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Roles_External_Participants</valueSetName>
    </valueSet>
</CustomField>