force-app/main/default/objects/External_Participants__c/fields/External_Participants_Count__c.field-meta.xml
<CustomField>
    <fullName>External_Participants_Count__c</fullName>
    <label>External Participants Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>