force-app/main/default/objects/External_Participants__c/fields/External_Participants_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Participants_Status__c</fullName>
    <label>External Participants Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>