force-app/main/default/objects/External_Participants__c/fields/Notify__c.field-meta.xml
<CustomField>
    <fullName>Notify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify</label>
    <type>Checkbox</type>
</CustomField>