force-app/main/default/objects/External_Participants__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Participants__c</columns>
    <columns>Yearly_Scheme__c</columns>
    <columns>External_Participants_Status__c</columns>
    <columns>External_Participants_Count__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>